# slurm-temp

./: Makefile.in  README.rst  aclocal.m4  config.h.in  configure  configure.ac
auxdir/: Makefile.in
contribs/: Makefile.in
contribs/cray/: Makefile.in
contribs/lua/: Makefile.in
contribs/nss_slurm/: Makefile.in
contribs/openlava/: Makefile.in
contribs/pam/: Makefile.in
contribs/pam_slurm_adopt/: Makefile.in
contribs/perlapi/: Makefile.in
contribs/pmi/: Makefile.in
contribs/pmi2/: Makefile.in
contribs/seff/: Makefile.in
contribs/sgather/: Makefile.in
contribs/sgi/: Makefile.in
contribs/sjobexit/: Makefile.in
contribs/torque/: Makefile.in
doc/: Makefile.in
doc/html/: Makefile.in
doc/man/: Makefile.in
etc/: Makefile.in  slurmrestd.service
src/: Makefile.in
src/api/: Makefile.in
src/bcast/: Makefile.in
src/common/: Makefile.in  fd.c  list.c  log.h  plugin.c  slurm_rlimits_info.c
src/database/: Makefile.in
src/lua/: Makefile.in
src/plugins/: Makefile.in
src/plugins/sched/sjf/: Makefile.am  Makefile.in  sjf.c  sjf.h  sjf_wrapper.c
src/sacct/: Makefile.in
src/sacctmgr/: Makefile.in
src/salloc/: Makefile.in
src/sattach/: Makefile.in
src/sbatch/: Makefile.in
src/sbcast/: Makefile.in
src/scancel/: Makefile.in
src/scontrol/: Makefile.in
src/scrontab/: Makefile.in  scrontab
src/sdiag/: Makefile.in
src/sinfo/: Makefile.in
src/slurmctld/: Makefile.in  controller.c  job_scheduler.c  job_scheduler.h  read_config.c  sched_plugin.c
src/slurmd/: Makefile.in
testsuite/: Makefile.in  testsuite.conf.sample
(+255 files in other folders)
